--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -56,6 +56,7 @@
     {% set id = 'branchUpdate' %}
 
     {% set dataSubBlocks = [UI.attibuteRow('diamante.desk.forms.name'|trans, entity.name)] %}
+    {% set dataSubBlocks = dataSubBlocks|merge([UI.attibuteRow('diamante.desk.forms.key'|trans, entity.key)]) %}
 
     {% set defaultAssigneeFullName = entity.defaultAssignee ? entity.defaultAssigneeFullName : 'diamante.desk.common.not_defined'|trans %}
     {% set dataSubBlocks = dataSubBlocks|merge([UI.attibuteRow('diamante.desk.forms.default_assignee'|trans, defaultAssigneeFullName)]) %}
