--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -10,7 +10,7 @@
 {% if resource_granted('VIEW', 'Entity:DiamanteDeskBundle:Comment') %}
     <ol class="diam-comments unstyled">
         {% for comment in comments %}
-            {% set imagePath = '' %}
+            {% set avatar = oro_configured_image_url(comment.author, 'avatar') %}
             <li class="diam-comment">
                 <div class="pull-right">
                 {% if resource_granted('EDIT', 'Entity:DiamanteDeskBundle:Comment') %}
@@ -21,7 +21,7 @@
                 {% endif %}
                 </div>
                 <div class="diam-comment-user-image">
-                    <img src="{{ imagePath ? imagePath|imagine_filter('avatar_med') : asset('bundles/oroui/img/info-' ~ iconType|default('user') ~ '.png') }}" alt="test">
+                    <img src="{{ avatar ? avatar : asset('bundles/oroui/img/info-' ~ iconType|default('user') ~ '.png') }}" alt="test">
                 </div>
                 <div class="diam-comment-meta">{{ comment.author.firstname }} {{ comment.author.lastname }} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
                 <div class="diam-comment-content">{{ comment.content|escape('html')|nl2br }}</div>
