--- a/Resources/views/Branch/edit.html.twig
+++ b/Resources/views/Branch/edit.html.twig
@@ -50,7 +50,7 @@
                 'data': [
                     form_row(form.name),
                     form_row(form.defaultAssignee),
-                    form_row(form.logoFile),
+                    form_row(form.logoFile, {'attr': {'accept' : 'image/jpeg, image/png'}}),
                     form_row(form.tags)
                 ]
             }
