--- a/Resources/front/assets/js/modules/Common/templates/modal.ejs
+++ b/Resources/front/assets/js/modules/Common/templates/modal.ejs
@@ -9,7 +9,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-primary js-save-btn">Save changes</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
