WSSE authorization with harcoded credentials

--- a/Resources/front/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/front/assets/js/modules/Header/templates/header.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <a href="/" class="logo col-md-6">
+  <a href="<%= baseUrl %>" class="logo col-md-6">
     <img src="assets/img/logo.png" alt="DiamanteDesk"/>
   </a>
   <div class="col-md-6">
