DIAM-343. Changes in popup "Change Status"

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -100,12 +100,9 @@
                 'options' : {
                     'alias': 'status-dialog',
                     'dialogOptions' : {
+                        'resizable' : false,
                         'title' : changeStatusTitle,
-                        'allowMaximize': true,
-                        'allowMinimize': true,
-                        'dblclick': 'maximize',
-                        'maximizedHeightDecreaseBy': 'minimize-bar',
-                        'width': 500
+                        'width': 420
                     }
                 }
             }
