Fix DIAM-360: If ticket does not contain comments, should be displayed text: "No comments yet"  - add italic

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -37,7 +37,7 @@
                 {% endif %}
             </li>
         {% else %}
-            <li>{{ 'diamante.desk.comment.messages.empty'|trans }}</li>
+            <li><em>{{ 'diamante.desk.comment.messages.empty'|trans }}</em></li>
         {% endfor %}
     </ol>
 {% endif %}
