--- a/Resources/views/Branch/edit.html.twig
+++ b/Resources/views/Branch/edit.html.twig
@@ -12,7 +12,11 @@
 {% endblock %}
 
 {% block navButtons %}
-    {{ UI.button({'path' : path('diamante_branch_view', { 'id' : form.vars.value.id }), 'title' : 'diamante.desk.ui.cancel'|trans, 'label' : 'diamante.desk.ui.cancel'|trans}) }}
+    {% if app.request.get('id') %}
+        {{ UI.button({'path' : path('diamante_branch_view', { 'id' : form.vars.value.id }), 'title' : 'diamante.desk.ui.cancel'|trans, 'label' : 'diamante.desk.ui.cancel'|trans}) }}
+    {% else %}
+        {{ UI.button({'path' : path('diamante_branch_list'), 'title' : 'diamante.desk.ui.cancel'|trans, 'label' : 'diamante.desk.ui.cancel'|trans}) }}
+    {% endif %}
     {% set html = UI.saveAndCloseButton() %}
     {% if form.vars.value.id or resource_granted('orocrm_contact_update') %}
         {% set html = html ~ UI.saveAndStayButton() %}
