--- a/Resources/front/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/front/assets/js/modules/Header/templates/header.ejs
@@ -14,7 +14,7 @@
         <input type="search" class="form-control" placeholder="Search"/>
       </div>
       <div class="create-ticket form-group form-group-lg">
-        <button class="btn btn btn-primary">Add New Ticket</button>
+        <button class="btn btn btn-primary js-create-ticket">Add New Ticket</button>
       </div>
     </div>
   </div>
