--- a/Resources/front/assets/less/layout/header.less
+++ b/Resources/front/assets/less/layout/header.less
@@ -17,13 +17,7 @@
   }
 
   .logo {
-    height: 62px;
     margin: 34px 0 28px;
-    display: block;
-    img {
-      max-width: 100%;
-      max-height: 100%;
-    }
   }
 
   .profile .btn-link {
@@ -39,5 +33,14 @@
       margin: 0;
       vertical-align: top;
     }
+  }
+}
+
+.logo {
+  display: block;
+  height: 62px;
+  img {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
