real api for tickets, rename task to tickets

--- a/Resources/front/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/front/assets/js/modules/Ticket/templates/view.ejs
@@ -1,5 +1,5 @@
 <p>
-    <a class="btn btn-link js-task-list" href="#tasks">
+    <a class="btn btn-link js-ticket-list" href="#tickets">
         <span class="fa fa-chevron-left"></span>
         Back
     </a>
