--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -36,7 +36,7 @@
 {% block content_data %}
     {% set id = 'edit-comment' %}
     {% set attachmentListWidget %}
-        {% if editCommand.id %}
+        {% if editCommand.id and form.vars.value.attachmentList.count() %}
             {{ oro_widget_render({
                 'widgetType': 'block',
                 'url': path('diamante_comment_widget_attachment_list', {id: editCommand.id})
