--- a/Resources/front/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/front/assets/js/modules/Ticket/templates/view.ejs
@@ -5,7 +5,7 @@
     </a>
 </p>
 <h1><%= subject %></h1>
-<small class="ticket-id">Ticket ID: <%= shortcode %>-<%= id %></small>
+<small class="ticket-id">Ticket ID: <%= branch_key %>-<%= id %></small>
 <div class="row">
     <div class="col-md-8">
         <div class="ticket-actions pull-right">
