--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -53,8 +53,8 @@
     </p>
 {% endif %}
 <script type="text/javascript">
-    require(['jquery', 'oroui/js/modal', 'oronavigation/js/navigation', 'orotranslation/js/translator', 'diamantedesk/js/diam.ajax.messages'],
-            function($, Modal, Navigation, __, ajaxMessages) {
+    require(['jquery', 'oroui/js/modal', 'oroui/js/mediator', 'orotranslation/js/translator'],
+            function($, Modal, Mediator, __) {
                 $('.delete-item-confirmation').click(function (e) {
                     e.preventDefault();
                     var url = $(this).data('url');
@@ -73,12 +73,8 @@
                     });
 
                     dialog.open(function () {
-                        var navigation = Navigation.getInstance();
-                        if (navigation) {
-                            navigation.loadingMask.show();
-                        }
-                        navigation.setLocation(url);
-
+                        Mediator.execute('showLoading');
+                        Mediator.execute('redirectTo', {url: url})
                     });
                 });
             });
