create and edit ticket, user model

--- a/Resources/front/assets/js/modules/Ticket/templates/form.ejs
+++ b/Resources/front/assets/js/modules/Ticket/templates/form.ejs
@@ -22,7 +22,7 @@
                 id="priority"
                 name="priority">
             <option value="low"<% if (priority.toLowerCase() == 'low') { %> selected<% } %>>Low</option>
-            <option value="normal"<% if (priority.toLowerCase() == 'medium') { %> selected<% } %>>Medium</option>
+            <option value="medium"<% if (priority.toLowerCase() == 'medium') { %> selected<% } %>>Medium</option>
             <option value="high"<% if (priority.toLowerCase() == 'high') { %> selected<% } %>>High</option>
         </select>
     </div>
