DIAM-356. Branch page: Error after clicking on tag

--- a/Resources/views/Branch/searchResult.html.twig
+++ b/Resources/views/Branch/searchResult.html.twig
@@ -5,7 +5,7 @@
 #}
 {% extends 'OroSearchBundle:Search:searchResultItem.html.twig' %}
 
-{% set showImage = true %}
+{% set showImage = false %}
 {% set imagePath = entity.logo ? entity.logo.pathname : null %}
 
 {% set recordUrl = indexer_item.recordUrl %}
