DIAM-391. Popup Assigne: Buttons "minimize", "maximize" and change pupup size - should be removed.

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -150,10 +150,8 @@
                 'options' : {
                     'alias': 'assignee-dialog',
                     'dialogOptions' : {
+                        'resizable' : false,
                         'title' : assignTitle,
-                        'allowMaximize': true,
-                        'allowMinimize': true,
-                        'dblclick': 'maximize',
                         'maximizedHeightDecreaseBy': 'minimize-bar',
                         'width': 500
                     }
