DIAM-392. Popup Assign: After saving, empty popup window still displayed.

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -149,6 +149,7 @@
                 'reload-grid-name' : '',
                 'options' : {
                     'alias': 'assignee-dialog',
+                    'stateEnabled' : false,
                     'dialogOptions' : {
                         'resizable' : false,
                         'title' : assignTitle,
