DIAM-334: Bugfixes and adaptation for changes introduced in Oro 1.4

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -12,7 +12,9 @@
         {% for comment in comments if comment.id  %}
             {% set imagePath = '' %}
             {% set author = fetch_user_details(comment.author) %}
-            {% set avatar = oro_configured_image_url(comment.author, 'avatar') %}
+            {% if author.avatar is defined %}
+                {% set avatar = oro_configured_image_url(comment.author, 'avatar') %}
+            {% endif %}
             <li class="diam-comment">
                 <div class="pull-right">
                 {% if resource_granted('EDIT', 'Entity:DiamanteDeskBundle:Comment') %}
@@ -23,7 +25,7 @@
                 {% endif %}
                 </div>
                 <div class="diam-comment-user-image">
-                    <img src="{{ avatar ? avatar : asset('bundles/oroui/img/info-' ~ iconType|default('user') ~ '.png') }}" alt="test">
+                    <img src="{{ avatar is defined ? avatar : asset('bundles/oroui/img/info-' ~ iconType|default('user') ~ '.png') }}" alt="test">
                 </div>
                 <div class="diam-comment-meta">{{ author.getFirstname }} {{ author.getLastname }} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
                 <div class="diam-comment-content">{{ comment.content|escape('html')|nl2br }}</div>
