DIAM-406. Please, add breadcrumbs navigation on "Add Comment" page

--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -19,18 +19,13 @@
 {% endblock %}
 
 {% block pageHeader %}
-    {% if editCommand.id %}
-        {% set breadcrumbs = {
-            'entity':      editCommand,
-            'indexPath':   path('diamante_ticket_view', {'key': ticket.key|trim}),
-            'indexLabel':  ticket.subject,
-            'entityTitle': 'diamante.desk.comment.actions.edit'|trans
-        } %}
-        {{ parent() }}
-    {% else %}
-        {% set title = 'diamante.desk.comment.actions.add'|trans %}
-        {% include 'OroUIBundle::page_title_block.html.twig' with { title: title } %}
-    {% endif %}
+    {% set breadcrumbs = {
+        'entity':      editCommand,
+        'indexPath':   path('diamante_ticket_view', {'key': ticket.key|trim}),
+        'indexLabel':  ticket.subject,
+        'entityTitle': (editCommand.id ? 'diamante.desk.comment.actions.edit' : 'diamante.desk.comment.actions.add')|trans
+    } %}
+    {{ parent() }}
 {% endblock pageHeader %}
 
 {% block content_data %}
