DIAM-346 fixed problem with displaying message after file upload

--- a/Resources/views/Ticket/attachment/list.html.twig
+++ b/Resources/views/Ticket/attachment/list.html.twig
@@ -53,7 +53,7 @@
     </ul>
 </div>
 <script type="text/javascript">
-    require(['diamantedesk/js/diam.attachments'], function(attachments){
+    require(['diamantedesk/js/diam.attachments', 'diamantedesk/js/diam.ajax.messages'], function(attachments){
         attachments($('#diam-dropzone-file'));
     });
 </script>
