DIAM-246. Need to add ability to change branch for already existing tickets.

--- a/Resources/views/Ticket/update.html.twig
+++ b/Resources/views/Ticket/update.html.twig
@@ -44,6 +44,7 @@
                 'title': 'diamante.desk.ticket.details'|trans,
                 'data': [
                     form_row(form.subject),
+                    form_row(form.branch),
                     form_row(form.status),
                     form_row(form.files),
                     form_row(form.priority),
