--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -136,9 +136,31 @@
             'title': 'diamante.desk.ticket.actions.edit'|trans,
             'label': 'diamante.desk.ui.edit'|trans
         }) }}
-    {% endif %}
 
-    {% if resource_granted('EDIT', entity) %}
+        {% set moveTitle = 'diamante.desk.ticket.actions.move'|trans %}
+        {{ UI.clientButton({
+            'dataUrl': path('diamante_ticket_move', { 'id': entity.id }),
+            'aCss': 'no-hash',
+            'iCss': 'icon-edit',
+            'dataId': entity.id,
+            'title' : moveTitle,
+            'label' : moveTitle,
+            'widget' : {
+                'type' : 'dialog',
+                'multiple' : true,
+                'reload-grid-name' : '',
+                'options' : {
+                    'alias': 'status-dialog',
+                    'stateEnabled' : false,
+                    'dialogOptions' : {
+                        'resizable' : false,
+                        'title' : moveTitle,
+                        'width': 520
+                    }
+                }
+            }
+        }) }}
+
         {% set assignTitle = 'diamante.desk.ticket.actions.assign'|trans %}
         {{ UI.clientButton({
             'dataUrl': path('diamante_ticket_assign', { 'id': entity.id }),
