DIAM-246. Need to add ability to change branch for already existing tickets. [refactroing controller action]

--- a/Resources/views/Ticket/widget/move.html.twig
+++ b/Resources/views/Ticket/widget/move.html.twig
@@ -1,5 +1,5 @@
 <div class="widget-content form-horizontal box-content row-fluid">
-    {% if saved is defined and saved %}
+    {% if reload_page is defined and reload_page %}
         <script type="text/javascript">
             require(['oroui/js/widget-manager', 'oroui/js/mediator'],
                     function(widgetManager, Mediator) {
