DIAM-402. Ticket grid: Key should be displayed in one line

--- a/Resources/views/Ticket/list.html.twig
+++ b/Resources/views/Ticket/list.html.twig
@@ -42,7 +42,7 @@
         </div>
     </div>
     <script>
-        require(['jquery',  'oroui/js/mediator', 'underscore'],
+        require(['jquery',  'oroui/js/mediator'],
             function($, mediator) {
                 mediator.on('grid_render:complete', function (element) {
                     $(element).find("tbody tr").each(function(){
