DIAM-405 change size of the filters block

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -273,3 +273,7 @@
 .ui-multiselect-menu.ui-widget {
     display: none;
 }
+
+.oro-clearfix-width:after, .oro-clearfix:after {
+    clear: none;
+}
